Challenge 1. HTML and CSS

--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
    <head>
       <title>AlsoEnergyCoding</title>
       <link rel="stylesheet" href="style.css">
+			<link href="https://fonts.googleapis.com/css?family=Pridi:600,700|Roboto:400,500,700" rel="stylesheet">
+			<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
-  <body>      
-      <script src="main.js"></script>
+  <body>
+  	<section class='page'>
+	  	<header class='header'>
+	  		<div class='header-icon'></div>
+	  		<h1 class='header-title'>AlsoEnergy Coding Challenge</h2>
+	  	</header>
+
+	  	<nav class='menu'>
+	  		<section class='menu-button-container'>
+		  		<button class='menu-button'>Home
+		  		</button>
+		  		<button class='menu-button'>About
+		  		</button>
+		  		<button class='menu-button'>Contact
+		  		</button>
+	  		</section>
+	  	</nav>
+
+	  	<main class='content'>
+	  		<section class='content-background'>
+	  			<p class='content-paragraph'>Qui consequuntur sunt et so ipsa, ab or ad. Architecto ullamco commodi and iste dolore ratione. Ad occaecat proident velit minima. Beatae nostrud but adipisicing, yet autem eius but et yet magna. Qui adipisicing. Veniam laudantium. Natus incididunt.</p>
+
+					<p class='content-paragraph'>Iste incidunt perspiciatis beatae proident voluptate reprehenderit. Reprehenderit adipisicing illo nisi yet error. Enim laboriosam so sed but architecto and labore adipisci. Si voluptate iste, consequuntur so in. Enim id, or quo and quo, minim consequatur. Incidunt amet quis aperiam lorem so eu. Do enim eius, but magni inventore. Mollit velit beatae. Nihil nostrum. Commodo commodo for laboris yet pariatur consequuntur. Quia. Voluptas aliqua cillum numquam yet commodo yet sequi dolorem. Fugiat esse. Velit corporis amet anim.</p> 
+
+					<p class='content-paragraph'>Ullamco incididunt or laborum. Consequat. Sequi voluptate sint aute. Do fugiat so exercitation, sit excepteur amet aliqua. Vel. Ullam minima nesciunt. Occaecat reprehenderit yet ad irure quaerat.</p>
+	  		</section>
+	  	</main>
+
+	  	<footer class='footer'>
+	  		©2019
+	  	</footer>      
+  	</section>
+    <script src="main.js"></script>
   </body>
 </html>
